Improving designs for MainPage and CarDetails